[#87] Fix: header, nav z-index 수정

--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  z-index: 1;
+  z-index: 99;
   background-color: var(--white);
   position: fixed;
   display: flex;
