--- a/components/common/nav/nav.module.scss
+++ b/components/common/nav/nav.module.scss
@@ -1,5 +1,5 @@
 .box {
-  z-index: 1;
+  z-index: 99;
   display: flex;
   position: fixed;
   bottom: 0;
